# router-management-app

./: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
src/components/ui/: chart.tsx  day-selector.tsx  sidebar.tsx  slider.tsx  stat-card.tsx  status-badge.tsx  switch.tsx  toaster.tsx
src/features/access-control/: AccessControlList.tsx  RuleModal.tsx
src/features/auth/: LoginForm.tsx
src/features/devices/: DevicesTable.tsx
src/features/guest-wifi/: GuestWifiForm.tsx
src/hooks/: use-access-control.ts  use-devices.ts  use-guest-wifi.ts  use-polling.ts
src/hooks/__tests__/: use-polling.test.tsx
src/lib/: ubus.ts
src/pages/: AccessControlPage.tsx  DashboardPage.tsx  DevicesPage.tsx  GuestWifiPage.tsx  LoginPage.tsx
src/services/: access-control.service.ts  auth.service.ts  devices.service.ts  guest-wifi.service.ts  router.service.ts
src/services/__tests__/: auth.service.test.ts  devices.service.test.ts  router.service.test.ts
src/store/: access-control.store.ts  auth.store.ts  devices.store.ts
src/store/__tests__/: auth.store.test.ts
src/styles/: globals.css
src/types/: router.ts
